fix: fix missing generated specs
